[package]
name = "llvm-ext"
version = "0.1.0"
authors = ["pnkfelix"]

build = "build.rs"

[build-dependencies]
gcc = "0.3"

[lib]
name = "llvm_ext"
path = "src/lib.rs"

[dependencies]
# llvm = "*"
semver = "*"
libc = "*"
cbox = "*"
llvm-sys = "*"

[dependencies.llvm-alt]
version = "0.3.2"
git = "https://github.com/pnkfelix/llvm-rs"
